remove duplicate name and contacts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar-photo">
-  <img src="{{ '/assets/img/avatar.jpg' | relative_url }}" alt="Sérgio Rebelo">
+  <img src="{{ '/assets/img/avatar.png' | relative_url }}" alt="Sérgio Rebelo">
 </div>
 
 <section>
@@ -10,7 +10,6 @@
 <div class="sidebar-social">
   <a href="https://www.linkedin.com/in/sergiorebelo" target="_blank" rel="noopener">LinkedIn</a>
   <a href="https://github.com/sergiorebelo" target="_blank" rel="noopener">GitHub</a>
-  <a href="mailto:sergio.rebelo@gmail.com">Email</a>
 </div>
 
 <section>
